--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 PORT=5000
 BASE_URL="http://localhost:5000"
 DATABASE_URL="postgresql://postgres:axnvee188216@localhost:5432/techtonic-api"
+DIRECT_URL="postgresql://postgres:axnvee188216@localhost:5432/techtonic-api"
+        
